WIP Styling: Generalization + Serialization